[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-autonomy-lab"
version = "0.1.0"
description = "Simulation-first autonomous drone mission stack"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
]

[project.scripts]
drone-autonomy-demo = "drone_autonomy_lab.simulation.demo:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["drone_autonomy_lab*"]
